Grace/tests/gibbs/errors/t006.grace
// ERROR = L0001
var x :=	42
